--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -76,7 +76,7 @@
 .card {
   margin: 1rem;
   padding: 1.5rem;
-  text-align: left;
+  text-align: center;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
@@ -108,6 +108,13 @@
   margin-left: 0.5rem;
 }
 
+.pokemonDetail {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
 @media (max-width: 600px) {
   .grid {
     width: 100%;
